--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="bower_components/angulartics/src/angulartics.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="bower_components/angulartics/src/angulartics-gtm.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
