Use google analytics module

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/angulartics/src/angulartics-gtm.js"></script>
+    <script src="bower_components/angulartics/src/angulartics-ga.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
