--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
     })(window,document,'script','dataLayer','GTM-PWKB3S');</script><!-- End Google Tag Manager --><!-- Add your site or application content here --><div class="container" ng-view=""></div><!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]--><script src="scripts/06020ebc.vendor.js"></script><script src="bower_components/angulartics/src/angulartics-gtm.js"></script><script src="scripts/a753e6f4.scripts.js"></script>
+    <![endif]--><script src="scripts/06020ebc.vendor.js"></script><script src="bower_components/angulartics/src/angulartics-gtm.js"></script><script src="bower_components/angulartics/src/angulartics-ga.js"></script><script src="scripts/fac566bd.scripts.js"></script>
