read angular-social

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/jquery-waypoints/waypoints.js"></script>
     <script src="bower_components/angulartics/src/angulartics.js"></script>
+    <script src="bower_components/angular-social/angular-social.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/angulartics/src/angulartics-gtm.js"></script>
