--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/angular-social/angular-social.css">
     <!-- endbuild -->
   </head>
   <body ng-app="tachikomaioApp">
